--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="btn-container">
-                <a href="Images/Filimon Dingamo's Resume.pdf" download class="main-btn">
+                <a href="Images/My-Resume.pdf" download class="main-btn">
                     <span class="btn-text">Download CV</span>
                     <span class="btn-icon"><i class="fas fa-download"></i></span>
                 </a>
