--- a/index.html
+++ b/index.html
@@ -217,14 +217,14 @@
                     </div>
 
                     <div class="project">
-                        <img src="Images/password-generator.jpg">
+                        <img src="Images/flappy-bird.jpg">
                         <div class="layer">
-                            <h3>Random Password Generator</h3>
-                            <p>This website generates new random passwords every time button is clicked.
-                                (HTML, CSS, JAVASCRIPT, BOOTSTRAP)</p>
+                             <h3>Flappy Bird</h3>
+                            <p>This website is a clone of the Flappy Bird game.
+                                (HTML, CSS, JAVASCRIPT)</p>
                             <div class="exter-links">
-                                <a href="https://github.com/Filimon111/Random-Password-Generator" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://storied-mooncake-6180c1.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                                <a href="https://github.com/Filimon111/Flappy-Bird" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                                <a href="https://flappy-bird-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                             
                             </div>
                         </div>
