--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- -------------------------------------------------------------------------------------------------------------------------------- -->
 
 
-        <!-- Services Section-->
+        <!-- Skills Section-->
         <section id="skills">
             <h1 class="sub-heading">SKILLS</h1>
                 <div class="divider"></div>
@@ -232,7 +232,7 @@
                     </div>
 
                     <div class="project">
-                        <img src="Images/calculator.jpg">
+                        <img src="Images/notes-app.jpg">
                         <div class="layer">
                             <h3>Notes App</h3>
                             <p>This website is a notes app with multiple features like addition of notes, deleting the notes, etc
