--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <img src="Images\2.jpg"/>
             <h1 id="h">Filimon Dingamo</h1>
             <div class="social-icons">
-                <a href="https://www.facebook.com/profile.php?id=100011090983001"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://github.com/Filimon111"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.instagram.com/filimon_asfaw/"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/filimon-dingamo-1070691a3/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100011090983001" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://github.com/Filimon111" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://www.instagram.com/filimon_asfaw/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/filimon-dingamo-1070691a3/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
 
             </div>
         </div>
@@ -195,79 +195,7 @@
         </section>
 
 
-        <!--  ------------------------------------------------------------------------------->
-
-        <!-- PROJECTS -->
-
-        <!--
-        <section id="projects">
-            <div class="container">
-                <h1 class="sub-heading">PROJECTS</h1>
-                <div class="divider"></div>
-
-                <div class="project-list">
-                    <div class="project">
-                        <img src="Images/meme-generator.jpg">
-                        <div class="layer">
-                            <h3>Meme Generator</h3>
-                            <p>This website grabs meme images from a meme from an API and allows the
-                                user to add text to the top and bottom of the page.
-                                (HTML, CSS, JAVASCRIPT, REACT)</p>
-                            <div class="exter-links">
-                                <a href="https://github.com/Filimon111/Meme-Generator" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://meme-generator-byfilimon.netlify.app" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <div class="project">
-                        <img src="Images/flappy-bird.jpg">
-                        <div class="layer">
-                             <h3>Flappy Bird</h3>
-                            <p>This website is a clone of the Flappy Bird game.
-                                (HTML, CSS, JAVASCRIPT)</p>
-                            <div class="exter-links">
-                                <a href="https://github.com/Filimon111/Flappy-Bird" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://flappy-bird-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project">
-                        <img src="Images/notes-app.jpg">
-                        <div class="layer">
-                            <h3>Notes App</h3>
-                            <p>This website is a notes app with multiple features like addition of notes, deleting the notes, etc
-                                (HTML, CSS, JAVASCRIPT, REACT)</p>
-                                <div class="exter-links">
-                                    <a href="https://github.com/Filimon111/Notes-App" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                                    <a href="https://notes-app-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-
-                                </div>
-                        </div>
-                    </div>
-
-                    <div class="project">
-                        <img src="Images/to-do-list.jpg">
-                        <div class="layer">
-                            <h3>To-do List</h3>
-                            <p>This website is a simple to do list. It allows you to add
-                                and remove items from the list.
-                                (HTML, CSS, JAVASCRIPT)</p>
-                            <div class="exter-links">
-                                <a href="https://github.com/Filimon111/To-do-List" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                                <a href="https://to-do-listbyfilimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-        </section>
-
-        -->
+    
     <section id="projects">
         <div class="container">
         <h1 class="sub-heading">PROJECTS</h1>
@@ -363,10 +291,10 @@
                         <p><i class="fa-solid fa-paper-plane"></i>filasfaw456@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i>+17039654153</p>
                         <div class="social-icons">
-                            <a href="https://www.facebook.com/profile.php?id=100011090983001"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="https://www.instagram.com/filimon_asfaw/"><i class="fa-brands fa-instagram"></i></a>
-                            <a href="https://www.linkedin.com/in/filimon-dingamo-1070691a3/"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100011090983001" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter" target="_blank"></i></a>
+                            <a href="https://www.instagram.com/filimon_asfaw/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com/in/filimon-dingamo-1070691a3/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                     </div>
 
