changed to-do-list image

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="icon-list">
                                 <ul>
                                     <li><i class="fa-solid fa-angle-right"></i> <strong>AGE: </strong><span>22</span></li>
-                                    <li><i class="fa-solid fa-angle-right"></i> <strong>PHONE: </strong><span>+7039654153</span></li>
+                                    <li><i class="fa-solid fa-angle-right"></i> <strong>PHONE: </strong><span>+1(703)-965-4153</span></li>
                                     <li><i class="fa-solid fa-angle-right"></i> <strong>EMAIL: </strong><span>filasfaw456@gmail.com</span></li>
                                 </ul>
                             </div>
