Added a new Project

--- a/index.html
+++ b/index.html
@@ -282,6 +282,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="mySlides fade">
+                <div class="project">
+                    <img src="Images/tic-tac-toe.jpg">
+                    <div class="layer">
+                         <h3>Tic Tac Toe</h3>
+                        <p>This website is a aimple Tic-Tac-Toe Game.
+                            (HTML, CSS, JAVASCRIPT)</p>
+                        <div class="exter-links">
+                            <a href="https://github.com/Filimon111/Tic-Tac-Toe" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://tic-tac-toe-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         
             <a class="prev" onclick="plusSlides(-1)"><i class="fa-solid fa-arrow-left"></i></a>
             <a class="next" onclick="plusSlides(1)"><i class="fa-solid fa-arrow-right"></i></a>
@@ -291,6 +307,7 @@
             <span class="dot" onclick="currentSlide(2)"></span>
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
+            <span class="dot" onclick="currentSlide(5)"></span>
         </div>
    </div>
 
