Added a new project

--- a/index.html
+++ b/index.html
@@ -236,6 +236,22 @@
             </div>
             <div class="mySlides fade">
                 <div class="project">
+                    <img src="Images/movieflix.jpg">
+                    <div class="layer">
+                        <h3>Movie Trailer App (MovieFlix)</h3>
+                        <p>This website uses the TMDB api to grab movies and displays them. It allows you
+                            to search for movies and play the trailer of the movies. 
+                            (HTML, CSS, JAVASCRIPT, REACT)</p>
+                        <div class="exter-links">
+                            <a href="https://github.com/Filimon111/Movie-Trailer-App" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://movieflix-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+
+                    </div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="project">
                     <img src="Images/meme-generator.jpg">
                     <div class="layer">
                         <h3>Meme Generator</h3>
@@ -249,6 +265,7 @@
 
                     </div>
             </div>
+
             </div>
 
             <div class="mySlides fade">
@@ -288,7 +305,7 @@
                     <img src="Images/tic-tac-toe.jpg">
                     <div class="layer">
                          <h3>Tic Tac Toe</h3>
-                        <p>This website is a aimple Tic-Tac-Toe Game.
+                        <p>This website is a simple Tic-Tac-Toe Game.
                             (HTML, CSS, JAVASCRIPT)</p>
                         <div class="exter-links">
                             <a href="https://github.com/Filimon111/Tic-Tac-Toe" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
@@ -308,6 +325,7 @@
             <span class="dot" onclick="currentSlide(3)"></span>
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
+            <span class="dot" onclick="currentSlide(6)"></span>
         </div>
    </div>
 
