--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
             <div class="divider"></div>
                 <p class="about-text">I am a front-end Web-Developer with a passion for designing, developing, and testing web applications
                     with strong analytical, communication, and problem-solving skills. I am committed to creating websites that
-                    meets business requirements and enhances customer experience.</p>
+                    meets business requirements and enhances customer experience. As an HTML Email developer, I am a dedicated and detail-oriented HTML Email Developer with a passion for creating dynamic and engaging email campaigns. I am proficient in HTML, CSS, and email-specific frameworks. Experienced in developing responsive and visually appealing email templates.  Seeking an opportunity to contribute technical expertise 
+                    to enhance email communication strategies.</p>
 
                 <div class="about-col">
                     <div class="img-col">
