--- a/index.html
+++ b/index.html
@@ -342,14 +342,14 @@
         <div class="slideshow-container" >
             <div class="mySlides-1 fade">
                 <div class="project">
-                    <img src="Images/sailchimp.jpg">
+                    <img src="Images/apple-newsletter.jpg">
                     <div class="layer">
-                        <h3>SailChimp</h3>
-                        <p>This website is a company newsletter email template.
+                        <h3>Apple Newsletter</h3>
+                        <p>This website is an apple company newsletter email template.
                             (HTML, CSS)</p>
                         <div class="exter-links">
-                            <a href="https://github.com/Filimon111/SailChimp" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
-                            <a href="https://sailchimp-by-filimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Filimon111/Apple-Newsletter" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://applenewsletterbyfilimon.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                 </div>
