--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <!-- left side -->
                             <div class="icon-list">
                                 <ul>
-                                    <li><i class="fa-solid fa-angle-right"></i> <strong>AGE: </strong><span>22</span></li>
+                                    <li><i class="fa-solid fa-angle-right"></i> <strong>AGE: </strong><span>23</span></li>
                                     <li><i class="fa-solid fa-angle-right"></i> <strong>PHONE: </strong><span>+1(703)-965-4153</span></li>
                                     <li><i class="fa-solid fa-angle-right"></i> <strong>EMAIL: </strong><span>filasfaw456@gmail.com</span></li>
                                 </ul>
@@ -199,6 +199,26 @@
                     <p>C++</p>
                 </div>
 
+                <div class="skills-icons">
+                    <i class="devicon-wordpress-plain"></i>
+                    <p>WORDPRESS</p>
+                </div>
+
+                <div class="skills-icons">
+                    <i class="devicon-tailwindcss-original-wordmark"></i>
+                    <p>TAILWINDCSS</p>
+                </div>
+
+                <div class="skills-icons">
+                    <i class="devicon-linux-plain"></i>
+                    <p>LINUX</p>
+                </div>
+
+                <div class="skills-icons">
+                    <i class="devicon-nodejs-plain-wordmark"></i>
+                    <p>NODEJS</p>
+                </div>
+
             </div>
 
         </section>
@@ -271,6 +291,22 @@
                 </div>
             </div>
 
+            <div class="mySlides fade">
+                <div class="project">
+                    <img src="Images/Venturo.jpg">
+                    <div class="layer">
+                        <h3>Travel Website (Venturo) </h3>
+                        <p>This website is a basic landing page for a travel website. 
+                            (HTML, CSS, JAVASCRIPT, REACT)</p>
+                        <div class="exter-links">
+                            <a href="https://github.com/Filimon111/Venturo-travel-site" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                            <a href="https://phenomenal-nougat-1e88ac.netlify.app/" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             
             <div class="mySlides fade">
                 <div class="project">
@@ -334,6 +370,7 @@
             <span class="dot" onclick="currentSlide(4)"></span>
             <span class="dot" onclick="currentSlide(5)"></span>
             <span class="dot" onclick="currentSlide(6)"></span>
+            <span class="dot" onclick="currentSlide(7)"></span>
         </div>
    </div>
 
